<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/menu_bg">

    <LinearLayout
        android:id="@+id/coinPill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/coin_pill_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="6dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <threeway.henroute.orchard.core.ui.OutlinedTextView
            android:id="@+id/coinTextView"
            style="@style/HenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:shadowColor="@color/transparent"
            tools:text="12345"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/settingsButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/menu_settings"
        android:scaleType="fitCenter"
        android:src="@drawable/settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <threeway.henroute.orchard.core.ui.OutlinedButton
        android:id="@+id/playButton"
        style="@style/HenButton.Primary"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="122dp"
        android:contentDescription="@string/menu_play"
        android:text="@string/menu_play"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/menuButtonsRow"
        android:layout_width="270dp"
        android:layout_height="82dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/shopButton"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:contentDescription="@string/menu_shop"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/shop_button" />

        <ImageView
            android:id="@+id/achievementsButton"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/menu_achievements"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/achievments_button" />

        <ImageView
            android:id="@+id/leadersButton"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/menu_ranking"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/leaderboard_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
