<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/grey_blur_bg" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/alert_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="28dp"
            android:paddingTop="38dp"
            android:paddingEnd="28dp"
            android:paddingBottom="30dp">

            <threeway.henroute.orchard.core.ui.OutlinedTextView
                android:id="@+id/subtitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="2dp"
                android:shadowColor="@color/transparent"
                android:text="@string/notification_prompt_subtitle"
                android:textColor="#6D3A24"
                android:textSize="16sp" />

            <threeway.henroute.orchard.core.ui.OutlinedButton
                android:id="@+id/allowButton"
                style="@style/HenButton.Primary"
                android:layout_width="190dp"
                android:layout_height="54dp"
                android:layout_marginTop="20dp"
                android:text="@string/notification_prompt_allow" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:layout_gravity="top|end"
            android:background="@null"
            android:contentDescription="@string/notification_prompt_close"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/button_close" />
    </FrameLayout>
</FrameLayout>
