<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_screen_1">

    <ImageView
        android:id="@+id/illustrationImageView"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:contentDescription="@null"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/pageDots"
        android:layout_width="wrap_content"
        android:layout_height="12dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/dotOne"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/bg_dot_active" />

        <View
            android:id="@+id/dotTwo"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="7dp"
            android:background="@drawable/bg_dot_inactive" />

        <View
            android:id="@+id/dotThree"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="7dp"
            android:background="@drawable/bg_dot_inactive" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bodyCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="28dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pageDots">

        <threeway.henroute.orchard.core.ui.OutlinedTextView
            android:id="@+id/bodyTextView"
            style="@style/HenTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="1dp"
            android:maxLines="4"
            android:text="@string/onboarding_text_1"
            android:textColor="@color/onboarding_text_fill"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:contentDescription="@string/onboarding_back"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <threeway.henroute.orchard.core.ui.OutlinedButton
        android:id="@+id/nextButton"
        style="@style/HenButton.Primary"
        android:layout_width="184dp"
        android:layout_height="58dp"
        android:layout_marginBottom="26dp"
        android:text="@string/onboarding_next"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
